# latex-tutorial

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: breadcrumbs.html
docs/source/content/: figs.rst  files.rst  markup.rst  refs.rst
template/: README.md  main.tex  refs.bib
